# phuffman

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
include/: Code.h  CodesTable.h  CodesTableAdapter.hpp  decode.hpp  decode.hpp~  encode.hpp  phuffman.hpp
src/: CMakeLists.txt  Code.c  Code.h  CodeTable.h  CodeTableAdapter.cpp  CodeTableAdapter.hpp  CodeTableInfo.h  CodesTable.h  CodesTableAdapter.cpp  CodesTableAdapter.hpp  CodesTableInfo.h  DepthCounterNode.cpp  DepthCounterNode.hpp  Frequency.c  Frequency.h  HuffmanTable.cpp  POD.h  constants.h  constants.hpp  phuffman.cpp  phuffman.hpp  phuffman.hpp.in  verbose.cpp  verbose.hpp
src/CUDA/: CMakeLists.txt  decode.cu  encode.cu  encode.hpp  phuffman_encode_detail.cu  phuffman_limits.cuh  phuffman_math.cu  phuffman_math.cuh
src/OpenCL/: cl.hpp  encoding.cl  phuffman_opencl.cpp.in  phuffman_opencl.hpp
src/POD/: Code.c  Code.h  CodesTable.h  CodesTableInfo.h  Frequency.c  Frequency.h  TableInfo.h
src/tests/: CMakeLists.txt  CTestTestfile.cmake  phuffman_unittest  phuffman_unittest.cu  phuffman_unittests
src/tests/Testing/Temporary/: CTestCostData.txt
src/tests/gtest/: CTestTestfile.cmake  gtest_unittest
test/: #phuffman_unittest.cu#  CMakeLists.txt  cpu_decode.cpp  cpu_decode.hpp  cpu_encode.cpp  cpu_encode.hpp  cpu_encoder.cpp  cpu_encoder.cpp~  cpu_encoder.hpp  phuffman_unittest.cu  phuffman_unittest.cu~
test/gtest/: CTestTestfile.cmake
