cmake_minimum_required(VERSION 2.6)
find_package(CUDA)
include_directories(${CUDA_SDK_ROOT_DIR} ./CUDA/)
set(CUDA_NVCC_FLAGS "-arch=sm_13")
cuda_add_library(cuda ./CUDA/encode.cu STATIC)
add_library (phuffman STATIC phuffman.cpp DepthCounterNode.cpp Code.c Frequency.c CodesTableAdapter.cpp)
target_link_libraries(phuffman cuda)
